productList,, CRUD for product, Bootstrap5

--- a/src/main/resources/templates/product/edit-product.html
+++ b/src/main/resources/templates/product/edit-product.html
@@ -9,12 +9,13 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title th:text="${title}"></title>
   </head>
   <body>
     <div th:replace="~{fragments/main-menu}"></div>
-    <h1>Contact Info</h1>
-    <span th:text="${phone}"></span>
-    <span th:text="${email}"></span>
+    <div class="p-3 m-0 border-0 bd-example m-0 border-0">
+      <h1 th:text="${title}"></h1>
+      <div th:replace="~{product/save-product}"></div>
+    </div>
   </body>
 </html>
