--- a/src/main/resources/templates/fragments/main-menu.html
+++ b/src/main/resources/templates/fragments/main-menu.html
@@ -1,5 +1,15 @@
-<div>
-  <a href="/">home</a>
-  <a href="/contact">contact</a>
-  <a href="/product">products</a>
-</div>
+<nav class="navbar bg-dark navbar-expand-lg navbar-dark">
+  <div class="container-fluid d-flex justify-content-evenly">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact">contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/product">products</a>
+      </li>
+    </ul>
+  </div>
+</nav>
