--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -3,19 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
   <body>
     <div th:replace="~{fragments/main-menu}"></div>
+    <div class="p-3 m-0 border-0 bd-example m-0 border-0">
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              th:src="${product.getImgUri()}"
+              class="bd-placeholder-img img-fluid rounded-start"
+              height="20vh"
+            />
+          </div>
+          <div class="col-md-7">
+            <div class="card-body">
+              <h1 class="card-title" th:text="${product.getName()}"></h1>
 
-    <h1 th:text="${product.getName()}"></h1>
-    <p>
-      <img th:src="${product.getImgUri()}" width="100" />
-    </p>
-    <h2>Opis productu:</h2>
-    <div>
-      <span th:text="${product.getDesc()}"></span>
-      <span th:text="${product.getPrice()}"></span> PLN
+              <h2>Opis productu:</h2>
+
+              <p class="card-text" th:text="${product.getDesc()}"></p>
+              <p class="card-text" th:text="${product.getPrice()}">PLN</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
