--- a/src/main/resources/templates/product/products.html
+++ b/src/main/resources/templates/product/products.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <title th:text="${title}"></title>
   </head>
   <body>
@@ -14,7 +20,8 @@
         <a th:href="'/productDetail?productId='+${product.getId()}"
           >[show more]</a
         >
-        <a th:href="'removeProduct?productId='+${product.getId()}">[remove]</a>
+        <a th:href="'/removeProduct?productId='+${product.getId()}">[remove]</a>
+        <a th:href="'/editProduct?productId='+${product.getId()}">[edit]</a>
       </li>
     </ul>
     <div th:replace="~{product/save-product}"></div>
