--- a/src/main/resources/templates/fragments/main-menu.html
+++ b/src/main/resources/templates/fragments/main-menu.html
@@ -10,6 +10,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/product">products</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/categories">categories</a>
+      </li>
     </ul>
   </div>
 </nav>
