--- a/src/main/resources/templates/error-page.html
+++ b/src/main/resources/templates/error-page.html
@@ -2,18 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap 5 404 Error Page</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
-  </head>
 
+    <title>Document</title>
+  </head>
   <body>
     <div class="d-flex align-items-center justify-content-center vh-100">
       <div class="text-center">
+        <!-- <h1 class="display-1 fw-bold">404</h1> -->
         <p class="fs-3">
           <span class="text-danger">Opps!</span> Page not found.
         </p>
