--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,17 @@
   </head>
   <body>
     <div th:replace="~{fragments/main-menu}"></div>
-    <h1>Witaj</h1>
+    <div
+      class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center "
+    >
+      <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">Welcome to Our page</h1>
+        <p class="lead font-weight-normal">
+          And an even wittier subheading to boot. Jumpstart your marketing
+          efforts with this example based on Apple's marketing pages.
+        </p>
+        <a class="btn btn-outline-primary" href="/contact">Contact Us</a>
+      </div>
+    </div>
   </body>
 </html>
