--- a/src/main/resources/templates/categories/category.html
+++ b/src/main/resources/templates/categories/category.html
@@ -20,9 +20,17 @@
             <div class="card-body">
               <h1 class="card-title" th:text="${category.getName()}"></h1>
 
-              <h2>Opis productu:</h2>
+              <h2>Category details:</h2>
 
               <p class="card-text" th:text="${category.getDesc()}"></p>
+              <ul>
+                <li th:each="product:${products}">
+                  <a
+                    th:href="${'/productDetail/'+product.getId()}"
+                    th:text="${product.getName()}"
+                  ></a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
