--- a/src/main/resources/templates/fragments/main-menu.html
+++ b/src/main/resources/templates/fragments/main-menu.html
@@ -13,6 +13,12 @@
       <li class="nav-item">
         <a class="nav-link" href="/categories">categories</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users">users</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/user/add">Register</a>
+      </li>
     </ul>
   </div>
 </nav>
