--- a/src/main/resources/templates/users/save-user.html
+++ b/src/main/resources/templates/users/save-user.html
@@ -1,101 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <div th:replace="~{fragments/main-menu}"></div>
-    <!-- błedy formularza -->
 
-    <form
-      th:action="${user!=null && user.getId()!=null ? '/user/update/'+ user.getId(): '/user/save' }"
-      method="post"
-    >
-      <input
-        name="firstName"
-        placeholder="User name"
-        th:value="${user!=null ? user.getFirstName(): ''}"
-      />
-      <input
-        name="lastName"
-        placeholder="User surname"
-        th:value="${user!=null ? user.getLastName(): ''}"
-      />
-      <input
-        type="email"
-        name="email"
-        placeholder="User email"
-        th:value="${user!=null ? user.getEmail(): ''}"
-      />
-      <input
-      type="password"
-      name="password"
-      placeholder="User password"
-      th:value="${user!=null ? user.getPassword(): ''}"
-    />
-      <!-- addres  edycja -->
-      <div th:if="${user!=null && user.getAdress()!=null}">
-        <div th:each="addres : ${user.getAdress()}">
-          <input
-            name="zipCode"
-            placeholder="ZipCode"
-            th:value="${addres.getZipCode()}"
-          />
-          <input
-            name="street"
-            placeholder="Street"
-            th:value="${addres.getStreet()}"
-          />
-          <input
-            name="city"
-            placeholder="City"
-            th:value="${addres.getCity()}"
-          />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div th:replace="~{fragments/main-menu}"></div>
+  <!-- błedy formularza -->
+  <div>
+    <ul>
+      <li th:each="error : ${errors}" th:text="${error}" class="text-danger"></li>
+    </ul>
+  </div>
+  <div class="d-flex justify-content-center">
+    <form th:action="${user!=null && user.getId()!=null ? '/user/update/'+ user.getId(): '/user/save' }" method="post"
+      class="p-3 m-0 border-0 bd-example m-0 border-0">
+      <div class="row">
+        <div class="col">
+          <input class="form-control" name="firstName" placeholder="User name"
+            th:value="${user!=null ? user.getFirstName(): ''}" />
+        </div>
+        <div class="col">
+          <input class="form-control" name="lastName" placeholder="User surname"
+            th:value="${user!=null ? user.getLastName(): ''}" />
         </div>
       </div>
-      <!-- addres insert -->
-      <div th:if="${user==null}">
-        <input name="zipCode" placeholder="ZipCode" />
-        <input name="street" placeholder="Street" />
-        <input name="city" placeholder="City" />
+      <div class="form-row">
+        <div class="col">
+          <input class="form-control" type="email" name="email" placeholder="User email"
+            th:value="${user!=null ? user.getEmail(): ''}" />
+        </div>
+      </div>
+      <div class="form-row" th:unless="${user !=null && user.getId()!=null}">
+        <div class="col">
+          <input class="form-control" type="password" name="password" placeholder="User password"
+          id="inputPassword"
+            th:value="${user!=null ? user.getPassword(): ''}" />
+        </div>
+        <div class="col">
+          <input class="form-control" type="password" name="repeatPassword" placeholder="Repeat password"
+          id="inputRepeatPassword"
+          oninput="checkPasswordMatcher()" />
+        <small id="passwordMatchMessage"></small>
+        </div>
       </div>
 
-      <!-- phones -->
-      <div th:if="${user!=null && user.getPhoneNumber()!=null}">
-        <div th:each="phone :${user.getPhoneNumber()} ">
-          <input
-            name="prefix"
-            placeholder="prefix"
-            th:value="${phone.getPrefix()}"
-          />
-          <input
-            name="phone"
-            placeholder="phone number"
-            th:value="${phone.getPhone()}"
-          />
+
+
+
+        <!-- addres  edycja -->
+        <div th:if="${user!=null && user.getAdress()!=null}">
+          <div th:each="addres : ${user.getAdress()}">
+            <div class="row g-3">
+              <div class="col">
+                <input class="form-control" name="zipCode" placeholder="ZipCode" th:value="${addres.getZipCode()}" />
+              </div>
+              <div class="col">
+                <input class="form-control" name="street" placeholder="Street" th:value="${addres.getStreet()}" />
+              </div>
+              <div class="col">
+                <input class="form-control" name="city" placeholder="City" th:value="${addres.getCity()}" />
+              </div>
+            </div>
+
+          </div>
         </div>
-      </div>
-      <!-- phones -->
-      <div th:if="${user==null}">
-          <input
-            name="prefix"
-            placeholder="prefix"
-          />
-          <input
-            name="phone"
-            placeholder="phone number"
-          />
+        <!-- addres insert -->
+        <div th:if="${user==null}">
+          <div class="row g-3">
+            <div class="col">
+              <input name="zipCode" placeholder="ZipCode" class="form-control" />
+            </div>
+            <div class="col">
+              <input name="street" placeholder="Street" class="form-control" />
+            </div>
+            <div class="col">
+              <input name="city" placeholder="City" class="form-control" />
+            </div>
+          </div>
         </div>
-      </div>
-      <button>Save</button>
+          <!-- phones -->
+          <div th:if="${user!=null && user.getPhoneNumber()!=null}">
+            <div th:each="phone :${user.getPhoneNumber()} ">
+              <div class="row g-3">
+                <div class="col">
+                  <input class="form-control" name="prefix" placeholder="prefix" th:value="${phone.getPrefix()}" />
+                </div>
+                <div class="col ">
+                  <input class="form-control" name="phone" placeholder="phone number" th:value="${phone.getPhone()}" />
+                </div>
+              </div>
+            </div>
+          </div>
+            <!-- phones -->
+            <div th:if="${user==null}">
+              <div class="row g-3">
+                <div class="col">
+                  <input class="form-control" name="prefix" placeholder="prefix" />
+                </div>
+                <div class="col ">
+                  <input class="form-control" name="phone" placeholder="phone number" />
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
     </form>
-  </body>
+  </div>
+  <script th:src="@{/passwordMatcher.js}"></script>
+
+</body>
+
 </html>
