--- a/src/main/resources/templates/fragments/main-menu.html
+++ b/src/main/resources/templates/fragments/main-menu.html
@@ -1,5 +1,5 @@
 <nav class="navbar bg-dark navbar-expand-lg navbar-dark">
-  <div class="container-fluid d-flex justify-content-evenly">
+  <div class="container-fluid d-flex justify-content-evenly" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="/">home</a>
@@ -14,10 +14,16 @@
         <a class="nav-link" href="/categories">categories</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/users">users</a>
+        <a class="nav-link" sec:authorize="hasRole('ROLE_ADMIN')" href="/users">users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/user/add">Register</a>
+        <a class="nav-link" sec:authorize="isAnonymous()" href="/user/add" >Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="isAnonymous()" href="/login" >Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="isAuthenticated()" href="/logout">Logout</a>
       </li>
     </ul>
   </div>
