--- a/src/main/resources/templates/product/products.html
+++ b/src/main/resources/templates/product/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.thymeleaf.org/thymeleaf-extras-spring-security6">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
 
     <div class="p-3 m-0 border-0 bd-example m-0 border-0">
       <div th:replace="~{fragments/search}"></div>
-      <div sec:authorize="hasRole('ROLE_MENAGER')" >
+      <div sec:authorize="hasAnyRole('ROLE_MENAGER','ROLE_ADMIN')" >
         <h1>Add new Product:</h1>
         <div th:replace="~{product/save-product}" ></div>
       </div>
@@ -34,12 +34,12 @@
               th:href="'/productDetail/'+${product.getId()}"
               >show more</a
             >
-            <a
+            <a sec:authorize="hasAnyRole('ROLE_MENAGER','ROLE_ADMIN')"
               class="btn btn-outline-success"
               th:href="'/editProduct/'+${product.getId()}"
               >edit</a
             >
-            <a
+            <a sec:authorize="hasAnyRole('ROLE_MENAGER','ROLE_ADMIN')"
               class="btn btn-outline-danger"
               th:href="'/removeProduct/'+${product.getId()}"
               >remove</a
@@ -48,6 +48,26 @@
         </li>
       </ul>
     </div>
-    <script th:src="@{/search.js}"></script>
+    <div>
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <div> Total number of products: <span th:text="${items}"></span></div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-auto">
+          <ul class="pagination">
+          <li class="page-item" th:each="pageNumber : ${#numbers.sequence(1, pages!=null ? pages: 1)}" th:class="${pageNumber==currentPage} ? 'active':'' " >
+            <a th:href="@{'/product/'+${pageNumber}}" th:text="${pageNumber}" class="page-link"></a>
+          </li>  
+          </ul>
+        </div>
+      </div>
+    </div>
+    <script >
+      function clearFilter(searchAction) {
+  window.location.href = searchAction;
+}
+    </script>
   </body>
 </html>
