--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -24,6 +24,7 @@
             <a th:href="${'/user/id/'+ user.getId()}"               class="btn btn-outline-primary">Show more</a>
             <a th:href="${'/user/edit/'+ user.getId()}"           class="btn btn-outline-success">Edit</a>
             <a th:href="${'/user/remove/'+ user.getId()}"              class="btn btn-outline-danger">Remove</a>
+            <a th:href="${'/user/role/'+ user.getId()}"              class="btn btn-outline-primary">Change user role</a>
           </span>
         
         </li>
