--- a/src/main/resources/templates/fragments/main-menu.html
+++ b/src/main/resources/templates/fragments/main-menu.html
@@ -31,6 +31,9 @@
           Logged user : <span sec:authentication="name"></span>
         </span>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" sec:authorize="isAuthenticated()" href="/myAccount">My Account</a>
+      </li>
     </ul>
   </div>
 </nav>
