--- a/src/main/resources/templates/login/logout.html
+++ b/src/main/resources/templates/login/logout.html
@@ -3,11 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Are you sure ?</title>
 </head>
 <body>
-    <form th:action="@{/logout}" method="post">
-        <input type="submit" value="Are you sure ?">
-    </form>
+<div class="possition-relatove overflow-hidden p-3 p-md-3 text-center" >
+<div class="col-md-5 p-lg-5 mx-auto my-5">
+    <div class="container mt-3">
+        <h3> Loggout current user: <span sec:authentication="name"></span></h3>
+        <button type="button" class="btn  btn-primary " data-bs-toggle="modal" data-bs-target="#myLogout">Logout</button>
+    </div>
+</div>
+</div>
+<div class="modal" id="myLogout">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Logout</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure ?
+
+            </div>
+            <div class="modal-footer">
+                <form th:action="@{/logout}" method="post">
+                    <input type="submit" value="Yes, logout me" class=" btn btn-danger">
+                </form>
+                <a href="/" class=" btn btn-primary">Return to main page</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+    
 </body>
 </html>
